# asio_service

./: .gitignore  CMakeLists.txt  readme
app/: CMakeLists.txt  cmd_singleton.cpp  cmd_singleton.hpp
client/: client.py  send.cpp  src.xml
lib/: CMakeLists.txt  sha_wrapper.cpp  sha_wrapper.hpp  xml_singleton.cpp  xml_singleton.hpp
srv/: CMakeLists.txt
